add_subdirectory(ContextMenu)
add_subdirectory(Overlay)
add_subdirectory(OverlayBox)
add_subdirectory(MessageBox)
add_subdirectory(PromptBox)
add_subdirectory(ScrollArea)
add_subdirectory(PlainTextBox)
add_subdirectory(RichTextBox)
add_subdirectory(PasswordTextBox)
add_subdirectory(ItemArranger)
add_subdirectory(WorkerIndicator)
set(ddui_SOURCES ${ddui_SOURCES} PARENT_SCOPE)
