add_subdirectory(ContextMenu)
add_subdirectory(Overlay)
add_subdirectory(OverlayBox)
add_subdirectory(MessageBox)
add_subdirectory(PromptBox)
add_subdirectory(ScrollArea)
add_subdirectory(PlainTextBox)
add_subdirectory(RichTextBox)
add_subdirectory(PasswordTextBox)
add_subdirectory(TokenizedTextBox)
add_subdirectory(TabBar)
add_subdirectory(ItemArranger)
add_subdirectory(TokenizedContent)
add_subdirectory(VirtualizedList)
add_subdirectory(WorkerIndicator)
add_subdirectory(Menu)
set(ddui_SOURCES ${ddui_SOURCES} PARENT_SCOPE)
